Fix Gap In Header Background COlor

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    margin: 0px;
 }
 
 .header {   
     display:flex;
-    flex: 1;
     justify-content: space-between;
     background: #1F2937;
+    padding-left: 100px;
 }
 
 .logo {
